# gdal

./: CMakeLists.txt  README.md
.github/: README.md
.github/workflows/: code_checks.yml
.github/workflows/ubuntu_20.04/: Dockerfile.ci
apps/: ogrinfo.cpp  test_ogrsf.cpp
autotest/ogr/: ogr_xodr.py
autotest/ogr/data/xodr/: test.xodr
cmake/helpers/: CheckDependentLibraries.cmake
doc/source/development/: building_from_source.rst
doc/source/drivers/vector/: xodr.rst
docker/alpine-normal/: Dockerfile
docker/alpine-small/: Dockerfile
docker/ubuntu-full/: Dockerfile  bh-gdal.sh
docker/ubuntu-small/: Dockerfile
frmts/: drivers.ini
gdal/ogr/ogrsf_frmts/xodr/: BorderLaneType.cpp  CenterLaneSF.cpp  CenterLaneSF.h  CubicPolynomials.cpp  CubicPolynomials.h  GNUmakefile  LaneOffsetCalculator.cpp  LaneOffsetCalculator.h  LaneSF.cpp  LaneSF.h  LaneSectionProcessor.cpp  LaneSectionProcessor.h  LaneSectionSF.cpp  LaneSectionSF.h  LaneType.h  LanesSF.cpp  LanesSF.h  ObjectProcessor.h  PlanViewCalculator.cpp  PlanViewGeometry.cpp  PlanViewGeometry.h  (+37 more)
ogr/: CMakeLists.txt  ogr_geocoding.cpp
ogr/ogrsf_frmts/: CMakeLists.txt  ogrsf_frmts.h
ogr/ogrsf_frmts/generic/: ogrregisterall.cpp
ogr/ogrsf_frmts/xodr/: CMakeLists.txt  CubicPolynomials.cpp  GNUmakefile  LaneOffsetCalculator.h  LaneSF.h  LaneSectionProcessor.h  LaneSectionSF.h  LanesSF.cpp  ObjectProcessor.cpp  ObjectSF.cpp  ObjectSF.h  PlanViewCalculator.h  PlanViewGeometryFunctionArc.cpp  PlanViewGeometryFunctionLine.cpp  PlanViewGeometryFunctionSpiral.cpp  README.md  RoadSF.cpp  SignalProcessor.cpp  WidthLaneType.cpp  XODR.cpp  XODR.h  XODRnmake.opt  ogr_xodr.h  ogrxodrdatasource.cpp  ogrxodrdriver.cpp  ogrxodrdrivercore.cpp  ogrxodrdrivercore.h  ogrxodrgeo.cpp  ogrxodrlayer.cpp  ogrxodrlayerlane.cpp  ogrxodrlayerlaneborder.cpp  ogrxodrlayerreferenceline.cpp  ogrxodrlayerroadmark.cpp  ogrxodrlayerroadobject.cpp  ogrxodrlayerroadsignal.cpp  xodr.md
port/: cpl_vsil.cpp
